:heavy_plus_sign: Added bootstrap-vue

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,4 +1,6 @@
 @import
   'variables',
   'mixins',
+  'node_modules/bootstrap/scss/bootstrap',
+  'node_modules/bootstrap-vue/src/index.scss',
   'typography'
