--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -2,6 +2,7 @@ $primary: #0D0D0D;
 $secondary: #646464;
 $tertiary: #F5F5F5;
 $accent: #EF6913;
+$accentPale: #FAE7DA;
 $accentEvent: #D85400;
 
 $gray1: #9D9D9D;
