:pencil: Created docs component

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -4,4 +4,5 @@
   'node_modules/bootstrap/scss/bootstrap',
   'node_modules/bootstrap-vue/src/index.scss',
   'base',
-  'typography'
+  'typography',
+  'helpers'
