--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -14,7 +14,10 @@
 }
 
 :root {
-  font-size: 100%;
+  @media(min-width: 1440px) {
+    font-size: 100%;
+  }
+  font-size: 88%;
   body {
     color: $primary;
     font-size: 1rem;
@@ -28,4 +31,36 @@
 
 a {
   color: $accent;
+}
+
+h1 {
+  font-family: 'RedHatMed';
+  @include font-size(32);
+}
+
+h2 {
+  font-family: 'RedHatMed';
+  @include font-size(24);
+}
+
+h3 {
+  font-family: 'RedHatMed';
+  @include font-size(20);
+}
+
+h4 {
+  font-family: 'RedHatMed';
+  @include font-size(16);
+}
+
+h5 {
+  font-family: 'RedHatMed';
+  @include font-size(12);
+}
+
+h6 {
+  font-family: 'RedHatMed';
+  @include font-size(10);
+  letter-spacing: 1px;
+  text-transform: uppercase;
 }
