--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,6 +1,7 @@
 $primary: #0D0D0D;
 $secondary: #646464;
 $tertiary: #F5F5F5;
+$danger: #E83131;
 $accent: #EF6913;
 $accentPale: #FAE7DA;
 $accentEvent: #D85400;
